--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="web_client_id">253752480176-4ij5114or5hbc48glkh961l5au6bpj18.apps.googleusercontent.com</string>
     <string name="login">Login</string>
     <string name="logout">Logout</string>
+    <string name="scrivi_un_messaggio">Scrivi un messaggio</string>
 </resources>
