--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,21 @@
     <string name="login">Login</string>
     <string name="logout">Logout</string>
     <string name="scrivi_un_messaggio">Scrivi un messaggio</string>
+    <string name="results">RESULTS</string>
+    <string name="pos">POS</string>
+    <string name="q1">Q1</string>
+    <string name="q2">Q2</string>
+    <string name="q3">Q3</string>
+    <string name="data_not_yet_available">DATA NOT YET AVAILABLE</string>
+    <string name="driver">DRIVER</string>
+    <string name="qualifying_results">QUALIFYING RESULTS</string>
+    <string name="grand_prix_name">Grand Prix Name</string>
+    <string name="sprint">SPRINT</string>
+    <string name="race">RACE</string>
+    <string name="fastest_lap">FASTEST LAP</string>
+    <string name="driver_FLAP">(DRIVER)</string>
+    <string name="flap_placeholder">-:--:---</string>
+    <string name="race_results">RACE RESULTS</string>
+    <string name="pts">PTS</string>
+    <string name="time">TIME</string>
 </resources>
