aggiunta frecce per tornare indietro sui fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="q3">Q3</string>
     <string name="data_not_yet_available">DATA NOT YET AVAILABLE</string>
     <string name="driver">DRIVER</string>
-    <string name="qualifying_results">QUALIFYING RESULTS</string>
+    <string name="qualifying_results">QUALIFYING</string>
     <string name="grand_prix_name">Grand Prix Name</string>
     <string name="sprint">SPRINT</string>
     <string name="race">RACE</string>
